Fix city box wrapping and scrollbar css

--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -16,7 +16,13 @@
   body {
     @apply bg-secondary text-primary font-sans;
   }
-  h1, h2, h3, h4, h5, h6 {
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply font-heading font-bold;
   }
 }
@@ -25,8 +31,11 @@
   .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
+
   .no-scrollbar {
     -ms-overflow-style: none;
+    /* IE and Edge */
     scrollbar-width: none;
+    /* Firefox */
   }
 }
